# HSE-ACS-HW2

ACS-HW-2-Dayana/: CMakeLists.txt  README.md  cartoon.cpp  cartoon.h  container.cpp  container.h  documentary.cpp  documentary.h  fiction.cpp  fiction.h  main.cpp  movie.cpp  movie.h  utils.h
ACS-HW-2-Dayana/outs/: random.out.txt  random_sorted.out.txt  test1.out.txt  test1_sorted.out.txt  test2.out.txt  test2_sorted.out.txt  test3.out.txt  test3_sorted.out.txt
ACS-HW-2-Dayana/tests/: test1.txt  test2.txt  test_results.txt
